<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_format"
        android:icon="@drawable/ic_format_paint_black_24dp"
        android:title="@string/btn_format"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:title="@string/btn_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/btn_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/btn_more"
        app:showAsAction="always" />

</menu>