<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="22dp"
            android:paddingBottom="22dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_portrait_outline"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#8f8f8f"
                android:textSize="20sp"
                android:text="@string/author_desc"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="22dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:background="@drawable/shape_author_edit_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:textColor="#8f8f8f"
                    android:text="@string/author_label"/>

                <com.haiyunshan.pudding.widget.ClearableEditText
                    android:id="@+id/edit_author"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:background="@null"
                    android:singleLine="true"
                    android:drawableRight="@drawable/ic_clear_all"
                    android:drawablePadding="4dp"
                    android:hint="@string/author_hint"
                    android:textColorHint="#c7c7cd"
                    android:maxLength="49"
                    android:maxLines="1">

                    <requestFocus/>

                </com.haiyunshan.pudding.widget.ClearableEditText>

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/author_label">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>