<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:id="@+id/contact_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="12dp">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="240dp"
                    android:layout_height="240dp"
                    android:layout_marginBottom="8dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_qrcode" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="4dp"
                    android:drawableLeft="@drawable/ic_wx_gh"
                    android:drawablePadding="2dp"
                    android:gravity="center"
                    android:text="@string/help_gh_title"
                    android:textColor="#41b83a"
                    android:textSize="12sp" />
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:shadowColor="#ffffff"
                android:shadowDx="1.2"
                android:shadowDy="1.2"
                android:shadowRadius="1.2"
                android:text="@string/help_msg_qrcode"
                android:textColor="#838383"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:shadowColor="#ffffff"
                android:shadowDx="1.2"
                android:shadowDy="1.2"
                android:shadowRadius="1.2"
                android:text="@string/help_msg_search"
                android:textColor="#838383"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/extra_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="12dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="#ffffff"
                        android:shadowDx="1.2"
                        android:shadowDy="1.2"
                        android:shadowRadius="1.2"
                        android:text="个人博客："
                        android:textColor="#838383"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_blog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:foreground="?selectableItemBackgroundBorderless"
                        android:text="http://andnext.club"
                        android:textColor="#41b83a"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="#ffffff"
                        android:shadowDx="1.2"
                        android:shadowDy="1.2"
                        android:shadowRadius="1.2"
                        android:text="版本："
                        android:textColor="#838383"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:foreground="?selectableItemBackgroundBorderless"
                        android:text="1.00.0_beta"
                        android:textColor="#41b83a"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/btn_open_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="4dp"
                android:text="@string/help_open_weixin"
                android:textColor="#41b83a"
                android:textSize="20sp" />

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/help_title">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
